<resources>
    <string name="app_name">List of persons</string>
    <string name="group">Группа</string>
    <string name="name">Имя</string>
    <string name="hint_name">Введите имя…</string>
    <string name="add">Добавить</string>
    <string name="hint_number">Введите число…</string>
    <string name="number_fill">0</string>
    <string name="time">Время добавления</string>
    <string name="delete">Удалить</string>
    <string name="change">Изменить</string>
    <string name="back">В главное меню</string>
    <string name="name_cs">Имя:</string>
    <string name="group_cs">Группа:</string>
    <string name="deldete_all">Удалить все</string>
    <string name="sort">Сортировка по группе 1</string>
    <string name="usual">Убрать сортировку</string>
</resources>