<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/first_menu"
        android:title="Поиск"
        android:icon="@drawable/ic_baseline_search_24"
        app:showAsAction="always"
        android:orderInCategory="10"
        app:actionViewClass="android.widget.SearchView"/>

    <group android:id="@+id/group_manu" android:visible="true">
        <item
            android:id="@+id/first_item_in_group"
            android:title="@string/deldete_all"/>
        <item
            android:title="@string/sort"
            android:id="@+id/second_item_in_group"/>
        <item
            android:id="@+id/third_item_in_group"
            android:title="@string/usual"/>
    </group>
</menu>
